# jupyterlab_wall

./: .copier-answers.yml  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  docker-compose.yml  environment.yml  install.json  jest.config.js  jupyter_jupyterlab_wall_config.py  package.json  postBuild  pyproject.toml  setup.py  tsconfig.test.json
.github/workflows/: build.yml  security-audit.yml
binder/: environment.yml  postBuild
jupyter-config/server-config/: jupyterlab_wall.json
jupyterlab_wall/: __init__.py  config.py  handlers.py
jupyterlab_wall/tests/: __init__.py  test_handlers.py  test_poller.py
src/: alertHeader.ts  alertManager.ts  alertMessage.ts  handler.ts  index.ts  utils.ts
style/: base.css
tests/: alertHeader.spec.ts  alertManager.spec.ts  alertMessage.spec.ts  handler.spec.ts  jest.polyfills.ts  utils.spec.ts
ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js  shutdown_test
ui-tests/tests/: ipympl_interaction.spec.ts  jupyterlab_wall.spec.ts
