[build-system]
requires = ["jupyter_packaging~=0.7.9", "jupyterlab>=3.0.0rc13,==3.*", "jupyterlab_pygments<0.3.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab_wall"
readme = "README.md"
license = {text = "BSD-3-Clause License"}
requires-python = ">=3.8"
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]"
]